<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>at.laborg</groupId>
	<artifactId>briss</artifactId>
	<version>1.0-rc.2</version>
	<packaging>jar</packaging>
	<name>briss</name>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>at.laborg.briss.Briss</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
				<!--
					<source>1.8</source>
					<target>1.8</target>
				-->
					<source>11</source>
					<target>11</target>
					<compilerArgs>
					    <arg>-Xlint</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
					<transformers>
						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<mainClass>at.laborg.briss.Briss</mainClass>
						</transformer>
					</transformers>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/*.SF</exclude>
								<exclude>META-INF/*.DSA</exclude>
								<exclude>META-INF/*.RSA</exclude>
							</excludes>
						</filter>
					</filters>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!--
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.2-beta-5</version>
				<configuration>
					<descriptors>
						<descriptor>src/assemble/brissassemble.xml</descriptor>
					</descriptors>
				</configuration>
			</plugin>
			-->
		</plugins>
	</build>

	<repositories>
	<!--
	      <repository>
		<id>clojars.org</id>
		<url>http://clojars.org/repo</url>
	      </repository>
	      <repository>
	       <id>geotoolkit</id>
	       <url>http://maven.geotoolkit.org/</url>
	      </repository>
	-->
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>5.5.8</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<!-- ***************************************************************
			 |
			 | 1. clone https://github.com/Lonzak/JPedal, insert into its pom.xml:
			 |
			 |       <repositories>
			 |               <repository>
			 |                       <id>mvnrepository.com</id>
			 |                       <url>http://www.mygrid.org.uk/maven/repository/</url>
			 |               </repository>
			 |       </repositories>
			 |
			 |    and run `mvn install`.
			 |
			 | 2. run (this worktree) `mvn clean package`
			 |
			 |-->
			<groupId>org.jpedal</groupId>
			<artifactId>jpedal_lgpl</artifactId>
			<version>4.92-p10</version>
		</dependency>
	</dependencies>
	<modules>
	</modules>
</project>
